@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Collector #1983: Specifying session-resolution-seconds >= 1200 caused
+        Zope startup to fail.
+
       - Collector #2169: webdav.Resource.COPY did not send ObjectClonedEvent.
 
   Zope 2.10.0 beta 2 (2006/08/20)
